# calrc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
include/: args_parser.hpp  grid.hpp  h5io.hpp  newton.hpp  py.hpp  threading.hpp
src/: args_parser.cpp  build_cffi.py  demo_with_rcm.py  demo_with_rcpy.py  grid.cpp  h5io.cpp  main.cpp  py.cpp  rcm.py  rcpy.py  setup_cffimodule.py
validation/: CMakeLists.txt  check_class_gridpoint.cpp  check_linspace.cpp  check_parser.cpp  gtest_hello_world.cpp
